--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
   margin: 8px 0 8px 4px;
 }
 
+.toolbar strong {
+  margin-right: 16px;
+}
+
+.toolbar select {
+  margin-right: 4px;
+}
+
 .iframe-list {
   display: flex;
 }
